@@ -12,6 +12,7 @@ import hudson.model.DirectoryBrowserSupport;
 import hudson.model.FreeStyleProject;
 import hudson.model.Item;
 import hudson.model.UnprotectedRootAction;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.UUID;
@@ -352,13 +353,13 @@ public class ResourceDomainTest {
         URL url = page.getUrl();
         Assert.assertTrue("page is served by resource domain", url.toString().contains("/static-files/"));
 
-        URL dirUrl = new URL(url.toString().replace("%20100%25%20evil%20content%20.html", ""));
+        URL dirUrl = new URI(url.toString().replace("%20100%25%20evil%20content%20.html", "")).toURL();
         Page dirPage = webClient.getPage(dirUrl);
         Assert.assertEquals("page is found", 200, dirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", dirPage.getWebResponse().getContentAsString().contains("href"));
         Assert.assertTrue("page content references file", dirPage.getWebResponse().getContentAsString().contains("evil content"));
 
-        URL topDirUrl = new URL(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", ""));
+        URL topDirUrl = new URI(url.toString().replace("%20100%25%20evil%20dir%20name%20%20%20/%20100%25%20evil%20content%20.html", "")).toURL();
         Page topDirPage = webClient.getPage(topDirUrl);
         Assert.assertEquals("page is found", 200, topDirPage.getWebResponse().getStatusCode());
         Assert.assertTrue("page content is HTML", topDirPage.getWebResponse().getContentAsString().contains("href"));
